# windows-codex-stability-guardian

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: auto-release.yml  ci.yml  release.yml
apps/guardian/: Cargo.toml
apps/guardian/assets/tools/: codex-resume-picker.js  repair-codex-resume.ps1
apps/guardian/scripts/: gui-window-smoke.ps1  package-release.ps1  tray-shell-smoke.ps1
apps/guardian/src/: app.rs  cli.rs  main.rs  shell.rs  tray.rs
apps/guardian/src/gui/: mod.rs  theme.rs  widgets.rs
crates/guardian-core/: Cargo.toml
crates/guardian-core/src/: audit.rs  error.rs  lib.rs  policy.rs  types.rs
crates/guardian-observers/: Cargo.toml
crates/guardian-observers/src/: codex.rs  docker_wsl.rs  lib.rs  profile.rs
crates/guardian-repair/: Cargo.toml
crates/guardian-repair/src/: bundle.rs  codex.rs  docker_wsl.rs  lib.rs
crates/guardian-windows/: Cargo.toml
crates/guardian-windows/src/: codex_config.rs  eventlog.rs  lib.rs  paths.rs  process.rs  registry.rs
