[workspace]
members = [
  "apps/guardian",
  "crates/guardian-core",
  "crates/guardian-observers",
  "crates/guardian-repair",
  "crates/guardian-windows",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
quick-xml = "0.38"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2.5"
zip = { version = "8.5.1", default-features = false, features = ["deflate"] }
