[package]
name = "guardian"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Windows-native local stability tooling for Codex CLI, Docker Desktop / WSL2, and Windows User Profile diagnostics."
repository = "https://github.com/ZRainbow1275/windows-codex-stability-guardian"
homepage = "https://github.com/ZRainbow1275/windows-codex-stability-guardian"

[dependencies]
chrono.workspace = true
clap.workspace = true
guardian-core = { path = "../../crates/guardian-core" }
guardian-observers = { path = "../../crates/guardian-observers" }
guardian-repair = { path = "../../crates/guardian-repair" }
guardian-windows = { path = "../../crates/guardian-windows" }
serde_json.workspace = true
tray-icon = "0.22.0"
tracing.workspace = true
tracing-subscriber.workspace = true
windows = { version = "0.58.0", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_System_LibraryLoader",
  "Win32_UI_Controls",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
] }
winit = "0.30.12"
